# Neuronscope

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_msvc.ps1  build_tests.ps1  build_tests_msvc.ps1  build_vs.bat
include/neuronscope/: telemetry_record.h
probe/: neuronprobe.py
scripts/: demo_mock.py
src/: main.cpp
src/core/: anomaly_detector.h  model_topology.h  ring_buffer.h
src/deserializer/: control_parser.h
src/ipc/: control_pipe.cpp  control_pipe.h  shared_memory_channel.cpp  shared_memory_channel.h
src/model/: module.h  transformer.cpp  transformer.h
src/tui/: app.cpp  app.h  keybindings.h  theme.h
src/tui/panels/: anomaly_panel.cpp  anomaly_panel.h  attention_panel.cpp  attention_panel.h  metrics_panel.cpp  metrics_panel.h  packet_stream_panel.cpp  packet_stream_panel.h  topology_panel.cpp  topology_panel.h
tests/: test_all.cpp
